Final api with no correct definitions. AKA IT WORKS :DDDDDDDDDDDDDDDD
