# swagger.yml
@@ -12,6 +12,60 @@ basePath: "/api"
 
 # Paths supported by the server application
 paths:
+  /online:
+    get:
+      operationId: "status.online"
+      tags:
+        - "Status"
+      responses:
+        200:
+          description: "Server is active"
+  /map/create:
+    get:
+      operationId: "map.build_map"
+      tags:
+        - "Map"
+      responses:
+        200:
+          description: "Map creation via endpoint"
+  /resource/limited:
+    get:
+      operationId: "resource.get_limited"
+      tags:
+        - "Resource"
+      summary: "The people data structure supported by the server application"
+      description: "Read the list of people"
+      responses:
+        200:
+          description: "Successful read people list operation"
+          schema:
+            type: "array"
+            items:
+              properties:
+                resource_id:
+                  type: string
+                author:
+                  type: string
+                name:
+                  type: string
+                reason:
+                  type: string
+                size:
+                  type: number
+                uri:
+                  type: string
+                last_modified:
+                  type: string
+                created_at:
+                  type: string
+                updated_at:
+                  type: string
+                x:
+                  type: number
+                y:
+                  type: number
+                z:
+                  type: number
   /resource/all:
     get:
       operationId: "resource.get_all"
@@ -125,6 +179,21 @@ paths:
           in: formData
           description: Id of the person to get
           type: file
+          required: True
+        - name: name
+          in: formData
+          description: Id of the person to get
+          type: string
+          required: True
+        - name: lastModified
+          in: formData
+          description: Id of the person to get
+          type: string
+          required: True
+        - name: reason
+          in: formData
+          description: Id of the person to get
+          type: string
           required: True
       responses:
         200:
